--- a/rules.yaml
+++ b/rules.yaml
@@ -4,4 +4,4 @@ rules:
   - DOMAIN-KEYWORD,google,auto
   - DOMAIN,google.com,auto
   - DOMAIN-SUFFIX,ad.com,REJECT
-  - DOMAIN-SUFFIX,http://checkip.dyndns.com
+  - DOMAIN-SUFFIX,http://checkip.dyndns.com,DIRECT
